Revert "CSS: Fix Add New Item Scrollbars"
This reverts commit 41c7eb3e509dbeb7cd75e3b8545141dfd1eca196.

--- a/templates/default/070-components/legacy/Services/_component_object.scss
+++ b/templates/default/070-components/legacy/Services/_component_object.scss
@@ -60,11 +60,3 @@ div.ilCreationFormSection .form-horizontal {
         }
     }
 }
-
-#il-add-new-item-gl {
-    max-height: initial;
-
-    .row {
-        --bs-gutter-x: 0;
-    }
-}
